# neurodev-mcp

./: .gitignore  .pylintrc  LICENSE  README.md  app.py  claude_desktop_config.example.json  examples.py  pyproject.toml  requirements.txt  server.py  setup.sh  test_installation.py
.github/workflows/: python-publish.yml
neurodev_mcp/: __init__.py  server.py
neurodev_mcp/analyzers/: __init__.py  code_analyzer.py
neurodev_mcp/executors/: __init__.py  test_executor.py
neurodev_mcp/generators/: __init__.py  test_generator.py
